validator_derive_tests/tests/compile-fail/nest_all_fields/no_nested_validations.rs
use validator::Validate;

#[derive(Validate)]
#[validate(nest_all_fields)]
struct Test {
    nested: Nested,
}

struct Nested {
    value: String,
}

fn main() {}
